[package]
name = "squatternaut"
version = "0.0.1+final"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Machine-readable database of squatted crates on crates.io"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/squatternaut"

[dependencies]
anyhow = "1"
csv = "1"
db-dump = "0.7"
semver = "1"
serde = "1"
serde_derive = "1"
termcolor = "1"
